bug# 17082 Client hangs when creating tables with partition This bug was only on Windows but we updated the call to create_temporary_file to match what is being done in other areas of MySQL